--- a/Sistema de Restaurante/ClientApp/app/components/cadastro/prato/cadastro.prato.component.html
+++ b/Sistema de Restaurante/ClientApp/app/components/cadastro/prato/cadastro.prato.component.html
@@ -3,27 +3,27 @@
 <div class="panel panel-default">
     <div class="panel-heading">Dados</div>
     <div class="panel-body">
-        <form action="#" method="post">
-            <div class="form-group">
+        <form novalidate [formGroup]="pratoForm" (ngSubmit)="save()"  >
+            <!--<div class="form-group">
                 <label for="SelRestaurantes">Restaurante</label>
                 <select class="form-control" id="SelRestaurantes">
                     <option>Restaurante 1</option>
                     <option>Restaurante 2</option>
                     <option>Restaurante 3</option>
                 </select>
-            </div>
+            </div>-->
 
             <div class="form-group">
                 <label for="nome">Prato</label>
-                <input type="text" class="form-control" id="prato" />
+                <input type="text" class="form-control" formControlName="nome" />
             </div>
             <div class="form-group">
-                <label for="nome">Preço(R$)</label>
-                <input type="text" class="form-control" id="preco" />
+                <label for="preco">Preço(R$)</label>
+                <input type="text" class="form-control" formControlName="preco" />
             </div>
 
             <div class="form-inline">
-                <button asp-area="" asp-controller="Home" asp-action="Pratos" class="btn btn-danger">
+                <button [routerLink]="['/pratos']" class="btn btn-danger">
                     <span class="glyphicon glyphicon-arrow-left"></span> Cancelar
                 </button>
                 <button type="submit" class="btn btn-success">
