--- a/Sistema de Restaurante/ClientApp/app/components/cadastro/restaurante/cadastro.restaurante.component.html
+++ b/Sistema de Restaurante/ClientApp/app/components/cadastro/restaurante/cadastro.restaurante.component.html
@@ -10,7 +10,7 @@
             </div>
 
             <div class="form-inline">
-                <button asp-area="" asp-controller="Home" asp-action="Restaurantes" class="btn btn-danger">
+                <button [routerLink]="['/restaurantes']" class="btn btn-danger">
                     <span class="glyphicon glyphicon-arrow-left"></span> Cancelar
                 </button>
                 <button type="submit" class="btn btn-success">
