--- a/Sistema de Restaurante/ClientApp/app/components/cadastro/prato/cadastro.prato.component.html
+++ b/Sistema de Restaurante/ClientApp/app/components/cadastro/prato/cadastro.prato.component.html
@@ -6,18 +6,19 @@
         <form novalidate [formGroup]="pratosForm" (ngSubmit)="save()">
             <div class="form-group">
                 <label for="SelRestaurantes">Restaurante</label>
-                <select class="form-control" (ngModelChange)="onChangeObj($event)">
-                    <option *ngFor="let restaurante of restaurantes">{{restaurante.nome}}</option>
+                <select class="form-control" (change)="onChangeObj($event.target.value)">
+                    <option [value]="null">Selecione um restaurante</option>
+                    <option [value]="restaurante.id" *ngFor="let restaurante of restaurantes">{{restaurante.nome}}</option>
                 </select>
             </div>
 
             <div class="form-group">
                 <label for="nome">Prato</label>
-                <input type="text" class="form-control" id="prato" />
+                <input type="text" class="form-control" formControlName="nome" />
             </div>
             <div class="form-group">
                 <label for="nome">Preço(R$)</label>
-                <input type="text" class="form-control" id="preco" />
+                <input type="text" class="form-control" formControlName="preco" />
             </div>
 
             <div class="form-inline">
