--- a/Sistema de Restaurante/ClientApp/app/components/cadastro/prato/cadastro.prato.component.html
+++ b/Sistema de Restaurante/ClientApp/app/components/cadastro/prato/cadastro.prato.component.html
@@ -22,7 +22,7 @@
             </div>
 
             <div class="form-inline">
-                <button asp-area="" asp-controller="Home" asp-action="Pratos" class="btn btn-danger">
+                <button [routerLink]="['/pratos']"  class="btn btn-danger">
                     <span class="glyphicon glyphicon-arrow-left"></span> Cancelar
                 </button>
                 <button type="submit" class="btn btn-success">
