--- a/Sistema de Restaurante/ClientApp/app/components/home/home.component.html
+++ b/Sistema de Restaurante/ClientApp/app/components/home/home.component.html
@@ -7,16 +7,16 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="https://timeline.canaltech.com.br/272326.700/google-remove-botao-ver-imagem-das-buscas-para-evitar-roubo-108334.jpg" alt="ASP.NET" />
+            <img src="../../../../wwwroot/images/image1.jpg" alt="Americana" />
         </div>
         <div class="item">
-            <img src="https://timeline.canaltech.com.br/272326.700/google-remove-botao-ver-imagem-das-buscas-para-evitar-roubo-108334.jpg" alt="Visual Studio"/>
+            <img src="../../../../wwwroot/images/image2.jpg" alt="Feijoada"/>
         </div>
         <div class="item">
-            <img src="https://timeline.canaltech.com.br/272326.700/google-remove-botao-ver-imagem-das-buscas-para-evitar-roubo-108334.jpg" alt="Package Management"/>
+            <img src="../../../../wwwroot/images/image3.jpg" alt="Pastel"/>
         </div>
         <div class="item">
-            <img src="https://timeline.canaltech.com.br/272326.700/google-remove-botao-ver-imagem-das-buscas-para-evitar-roubo-108334.jpg" alt="Microsoft Azure"/>
+            <img src="../../../../wwwroot/images/image4.jpg" alt="Pizza"/>
         </div>
     </div>
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
