--- a/Sistema de Restaurantes/ClientApp/app/components/restaurantes/restaurantes.component.html
+++ b/Sistema de Restaurantes/ClientApp/app/components/restaurantes/restaurantes.component.html
@@ -37,7 +37,12 @@
                             </i>
                         </button>
                     </td>
-                    <td><span class="glyphicon glyphicon-pencil text-info"></span></td>
+                    <td>
+                    <button type="button" class="btn btn-sm btn-info" (click)="alterar(restaurante)">
+                        <i class="glyphicon glyphicon-pencil">
+                        </i>
+                    </button>
+                    </td>
                     <td>{{restaurante.nome}} </td>
                 </tr>
 
